# lora

./: .gitignore  README.en.md  README.md  README.zh-CN.md  README_EN.md  edit-project.html  index.html  new-project.html  package-lock.json  package.json  pnpm-lock.yaml  settings.html  sync-version.js  tray-menu.html  vite.config.ts
src/: App.vue  EditProjectApp.vue  NewProjectApp.vue  SettingsApp.vue  TrayMenuApp.vue  designTokens.ts  edit-project.ts  main.ts  new-project.ts  settings.ts  tray-menu.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  version-info.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: app_launcher.rs  backup.rs  data.rs  data_manager.rs  helpers.rs  lib.rs  main.rs  models.rs  settings_manager.rs  system.rs  system_integration.rs  win_native.rs  window_manager.rs  windows.rs
src/assets/: context-menu.css  design-tokens.css  global.css  icons.css
src/components/: LanguageSwitch.vue  LanguageSwitch.vue.ts  SettingsModal.vue
src/i18n/: index.ts  types.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/utils/: customDialog.ts
