[package]
name = "lora"
version = "0.2.0"
description = "一个基于 Tauri + Vue 3 的现代化应用启动器，支持分类管理和快速启动。"
authors = ["icloudwar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lnk = "0.5"
tokio = { version = "1", features = ["time"] }
winapi = { version = "0.3", features = ["commdlg", "combaseapi", "errhandlingapi", "shellapi", "shlobj", "winerror", "winreg", "winuser", "wingdi"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell", "Win32_UI_Shell_Common"] }
image = "0.24"
ico = "0.2"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
mime = "0.3"
url = "2"
